# pxr-work

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  dispatcher.cpp  pch.h  pyproject-dev.toml  pyproject.toml
.github/actions/building-deps/: action.yml
.github/workflows/: linux.yml  macos.yml  pypi.yml  windows.yml
cmake/: pxr-work-config.cmake.in
src/: CMakeLists.txt
src/pxr/work/: api.h  detachedTask.cpp  detachedTask.h  dispatcher.cpp  dispatcher.h  loops.cpp  loops.h  moduleDeps.cpp  pch.h  reduce.cpp  reduce.h  singularTask.cpp  singularTask.h  sort.h  threadLimits.cpp  threadLimits.h  utils.cpp  utils.h  withScopedParallelism.h
src/python/: CMakeLists.txt  __init__.py  module.cpp  wrapThreadLimits.cpp
test/: CMakeLists.txt  testWorkDetachedTask.cpp  testWorkDispatcher.cpp  testWorkLoops.cpp  testWorkReduce.cpp  testWorkSort.cpp  testWorkThreadLimits.cpp
